@@ -3,10 +3,10 @@ package com.projet.pp.controller;
 import com.projet.pp.model.Role;
 import com.projet.pp.model.User;
 import com.projet.pp.repository.RoleRepository;
+import com.projet.pp.repository.UserRepository;
 import com.projet.pp.service.OTPService;
 import com.projet.pp.service.PasswordUtil;
 import com.projet.pp.service.UserService;
-import com.projet.pp.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -19,9 +19,11 @@ import java.time.LocalDate;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
 @RestController
 @RequestMapping("/api/users")
+@CrossOrigin(origins = "*")
 public class UserController {
 
     @Autowired
@@ -39,31 +41,27 @@ public class UserController {
     @Autowired
     private PasswordEncoder passwordEncoder;
 
-
     @GetMapping("/username/{username}")
     public ResponseEntity<User> getUserByUsername(@PathVariable String username) {
         User user = userService.getUserByUsername(username);
         return user != null ? ResponseEntity.ok(user) : ResponseEntity.notFound().build();
     }
 
-
     @GetMapping
     public ResponseEntity<List<User>> getAllUsers() {
-        return new ResponseEntity<>(userService.getAllUsers(), HttpStatus.OK);
+        return ResponseEntity.ok(userService.getAllUsers());
     }
 
     @GetMapping("/search")
     public ResponseEntity<List<User>> searchUsers(@RequestParam String query) {
-        List<User> users = userService.searchUsers(query);
-        return ResponseEntity.ok(users);
+        return ResponseEntity.ok(userService.searchUsers(query));
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<User> getUserById(@PathVariable Long id) {
-        return new ResponseEntity<>(userService.getUserById(id), HttpStatus.OK);
+        return ResponseEntity.ok(userService.getUserById(id));
     }
 
-    // POST /api/users/signup : création d'un nouvel utilisateur
     @PostMapping("/signup")
     public ResponseEntity<?> signup(@RequestBody Map<String, String> signupData) {
         String nom = signupData.get("nom");
@@ -74,21 +72,15 @@ public class UserController {
         String ncin = signupData.get("ncin");
         String genre = signupData.get("genre");
 
-        // Hachage du mot de passe avec BCrypt
         String hashedPassword = passwordEncoder.encode(rawPassword);
-
-        // Conversion de la date d'embauche (format: yyyy-MM-dd)
         LocalDate dateEmbauche = LocalDate.parse(signupData.get("dateEmbauche"));
-
-        // Conversion du salaire
         double salaire = Double.parseDouble(signupData.get("salaire"));
-
-        // Récupération du rôle depuis l'ID
         Long roleId = Long.parseLong(signupData.get("role_id"));
         Role role = roleRepository.findById(roleId)
                 .orElseThrow(() -> new RuntimeException("Rôle non trouvé"));
 
-        User user = new User(nom, prenom, username, email, hashedPassword, dateEmbauche, salaire, role, ncin, genre);
+        User user = new User(nom, prenom, username, email, hashedPassword,
+                dateEmbauche, salaire, role, ncin, genre);
 
         User createdUser = userService.createUser(user);
         return ResponseEntity.status(HttpStatus.CREATED).body(createdUser);
@@ -99,47 +91,48 @@ public class UserController {
         try {
             String username = loginData.get("username");
             String encryptedPassword = loginData.get("password");
-
             String decryptedPassword = PasswordUtil.decrypt(encryptedPassword);
 
             User user = userRepository.findByUsername(username)
                     .orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
-
 
             if (!passwordEncoder.matches(decryptedPassword, user.getPassword())) {
                 return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
                         .body(Collections.singletonMap("message", "Identifiants invalides"));
             }
 
-
+            // Authentification dans le contexte Spring Security
             UsernamePasswordAuthenticationToken authToken =
                     new UsernamePasswordAuthenticationToken(username, decryptedPassword);
             SecurityContextHolder.getContext().setAuthentication(authToken);
 
-
+            // Génération et envoi de l’OTP
             otpService.generateAndSendOTP(user);
-
             return ResponseEntity.ok(Collections.singletonMap("message", "OTP envoyé à votre email"));
+
         } catch (Exception ex) {
             ex.printStackTrace();
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Collections.singletonMap("message", "Erreur lors du décryptage ou de l'authentification"));
+                    .body(Collections.singletonMap("message", "Erreur lors de l'authentification"));
         }
     }
 
-
+    /**
+     * Étape 1 de la réinitialisation : on ne fait que VALIDER l'OTP (sans le marquer comme utilisé).
+     * L'utilisateur reste en mode 'reset' côté front.
+     */
     @PostMapping("/verify-otp")
-    public ResponseEntity<?> verifyOTP(
-            @RequestParam String username,
-            @RequestParam String code
-    ) {
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
+    public ResponseEntity<?> verifyOTP(@RequestBody Map<String, String> body) {
+        String identifier = body.get("username"); // login ou email
+        Optional<User> optUser = userRepository.findByUsername(identifier);
+        if (optUser.isEmpty()) {
+            optUser = userRepository.findByEmail(identifier);
+        }
+        User user = optUser.orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
 
-        boolean isValid = otpService.verifyOTP(user, code);
-
-        if (isValid) {
-            return ResponseEntity.ok(Map.of("message", "OTP validé, connexion réussie"));
+        boolean valid = otpService.validateOTP(user, body.get("code"));
+        if (valid) {
+            return ResponseEntity.ok(Map.of("message", "OTP valide, vous pouvez réinitialiser"));
         } else {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                     .body(Map.of("message", "OTP invalide ou expiré"));
@@ -147,14 +140,17 @@ public class UserController {
     }
 
     @PutMapping("/update/{id}")
-    public ResponseEntity<?> updateUser(@PathVariable Long id, @RequestBody Map<String, String> updateData) {
-        User existingUser = userRepository.findById(id).orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
+    public ResponseEntity<?> updateUser(@PathVariable Long id,
+                                        @RequestBody Map<String, String> updateData) {
+        User existingUser = userRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
 
         String username = updateData.get("username");
-        User existingUserWithUsername = userRepository.findByUsername(username).orElse(null);
-        if (existingUserWithUsername != null && !existingUserWithUsername.getId().equals(id)) {
-            return ResponseEntity.status(HttpStatus.CONFLICT).body(Map.of("message", "Nom d'utilisateur déjà utilisé"));
-        }
+        userRepository.findByUsername(username)
+                .filter(u -> !u.getId().equals(id))
+                .ifPresent(u -> {
+                    throw new RuntimeException("Nom d'utilisateur déjà utilisé");
+                });
 
         existingUser.setNom(updateData.getOrDefault("nom", existingUser.getNom()));
         existingUser.setPrenom(updateData.getOrDefault("prenom", existingUser.getPrenom()));
@@ -163,10 +159,9 @@ public class UserController {
         existingUser.setNcin(updateData.getOrDefault("ncin", existingUser.getNcin()));
 
         String rawPassword = updateData.get("password");
-        if (rawPassword != null && !rawPassword.trim().isEmpty()) {
+        if (rawPassword != null && !rawPassword.isBlank()) {
             existingUser.setPassword(passwordEncoder.encode(rawPassword));
         }
-
         if (updateData.containsKey("dateEmbauche")) {
             existingUser.setDateEmbauche(LocalDate.parse(updateData.get("dateEmbauche")));
         }
@@ -175,11 +170,47 @@ public class UserController {
         }
         if (updateData.containsKey("role_id")) {
             Long roleId = Long.parseLong(updateData.get("role_id"));
-            Role role = roleRepository.findById(roleId).orElseThrow(() -> new RuntimeException("Rôle non trouvé"));
+            Role role = roleRepository.findById(roleId)
+                    .orElseThrow(() -> new RuntimeException("Rôle non trouvé"));
             existingUser.setRole(role);
         }
 
         User updatedUser = userService.updateUser(id, existingUser);
         return ResponseEntity.ok(updatedUser);
+    }
+
+    @PostMapping("/forgot-password")
+    public ResponseEntity<?> forgotPassword(@RequestBody Map<String, String> body) {
+        String email = body.get("email");
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new RuntimeException("Email non trouvé"));
+
+        otpService.generateAndSendOTP(user);
+        return ResponseEntity.ok(Map.of("message", "Code envoyé sur votre email"));
+    }
+
+    /**
+     * Étape 2 de la réinitialisation : on CONSOME l'OTP (mise à jour isUsed=true) et on change le mot de passe.
+     */
+    @PostMapping("/reset-password")
+    public ResponseEntity<?> resetPassword(@RequestBody Map<String, String> body) {
+        String email   = body.get("email");
+        String code    = body.get("code");
+        String newPwd  = body.get("newPassword");
+
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new RuntimeException("Email non trouvé"));
+
+        // Cette méthode marque l'OTP comme utilisé
+        boolean valid = otpService.verifyOTP(user, code);
+        if (!valid) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                    .body(Map.of("message", "Code OTP invalide ou expiré"));
+        }
+
+        // Hash et sauvegarde du nouveau mot de passe
+        user.setPassword(passwordEncoder.encode(newPwd));
+        userService.updateUser(user.getId(), user);
+        return ResponseEntity.ok(Map.of("message", "Mot de passe réinitialisé"));
     }
 }
